--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "webmozart/console",
-    "description": "A powerful console API built on the shoulders of the Symfony Console component.",
+    "description": "A Git-like extension of symfony/console with a testable architecture.",
     "license": "MIT",
     "authors": [
         {
