--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
         "php": ">=5.3.9",
+        "webmozart/assert": "~1.0@dev",
         "symfony/console": "~2.5",
         "symfony/process": "~2.5",
         "symfony/event-dispatcher": "~2.5"
