Fixed minimum package versions in composer.json

--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
     ],
     "require": {
         "php": ">=5.3.9",
-        "webmozart/assert": "~1.0",
-        "symfony/console": "~2.5",
-        "symfony/process": "~2.5",
-        "symfony/event-dispatcher": "~2.5"
+        "webmozart/assert": "^1.0",
+        "symfony/console": "^2.7",
+        "symfony/process": "^2.5",
+        "symfony/event-dispatcher": "^2.5"
     },
     "require-dev": {
-        "symfony/filesystem": "~2.3",
+        "symfony/filesystem": "^2.3",
         "phpunit/phpunit": "^4.6"
     },
     "autoload": {
