--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: false
 
 cache:
   directories:
-    - $HOME/.composer/cache
+    - $HOME/.composer/cache/files
 
 matrix:
   include:
@@ -13,7 +13,7 @@ matrix:
     - php: 5.5
     - php: 5.6
     - php: 5.6
-      env: COMPOSER_FLAGS='--prefer-lowest --prefer-stable' 
+      env: COMPOSER_FLAGS='--prefer-lowest --prefer-stable'
     - php: hhvm
     - php: nightly
   allow_failures:
@@ -23,7 +23,7 @@ matrix:
 
 install: composer update $COMPOSER_FLAGS -n
 
-script: vendor/bin/phpunit -v --coverage-clover=coverage.clover
+script: vendor/bin/phpunit --verbose --coverage-clover=coverage.clover
 
 after_script:
   - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi;'
