--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "require-dev": {
         "symfony/filesystem": "^2.3",
-        "phpunit/phpunit": "^4.6"
+        "phpunit/phpunit": "^4.6",
+        "sebastian/version": "^1.0.1"
     },
     "autoload": {
         "psr-4": {
